--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,6 +52,11 @@
         Administradoras
       </mat-list-item>
       <mat-divider></mat-divider>
+      <mat-list-item routerLink="/opcoes" class="mouse-pointer">
+        <mat-icon class="icon-spacer">label</mat-icon>
+        Opcoes
+      </mat-list-item>
+      <mat-divider></mat-divider>
       <mat-list-item routerLink="/usuarios" class="mouse-pointer">
         <mat-icon class="icon-spacer">manage_accounts</mat-icon>
         Usuarios
