--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,7 @@
       </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item routerLink="/opcoes" class="mouse-pointer">
-        <mat-icon class="icon-spacer">label</mat-icon>
+        <mat-icon class="icon-spacer">mediation</mat-icon>
         Opcoes
       </mat-list-item>
       <mat-divider></mat-divider>
