--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -1,15 +1,15 @@
-<div class="flex-container" xmlns="http://www.w3.org/1999/html">
+<div class="flex-container">
   <div>
     <mat-card>
       <mat-card-title>
-        <span>
-          Lista de Produtos
-        </span>
+      <span>
+        Lista de Produtos
+      </span>
         <span style="float: right">
-          <a (click)="adicionar()">
-            <mat-icon class="mouse-pointer">add</mat-icon>
-          </a>
-        </span>
+        <a (click)="adicionar()">
+          <mat-icon class="mouse-pointer">add</mat-icon>
+        </a>
+      </span>
       </mat-card-title>
       <br/>
 
@@ -84,6 +84,10 @@
         <br/>
 
         <mat-card-content>
+          <div style="float: right; padding-bottom: 10px">
+            <mat-slide-toggle [(ngModel)]="produtoEditando.ativo" [disabled]="!editandoProduto()" labelPosition="before"></mat-slide-toggle>
+          </div>
+
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Nome</mat-label>
             <input matInput placeholder="Nome" [disabled]="!adicionandoProduto() && !editandoProduto()"
@@ -117,17 +121,72 @@
                      [(ngModel)]="produtoEditando.reembolso">
             </mat-form-field>
           </div>
-
-          <div>
-            <mat-slide-toggle [(ngModel)]="produtoEditando.ativo" [disabled]="!editandoProduto()"
-                              labelPosition="before" color="primary">Ativo</mat-slide-toggle>
-            <br/>
-            <mat-checkbox style="margin: 0 10px" labelPosition="before"
-                          [disabled]="!editandoProduto()"
-                          [(ngModel)]="produtoEditando.ativo">Ativo</mat-checkbox>
-          </div>
         </mat-card-content>
       </mat-card>
     </div>
   </div>
+</div>
+
+<div *ngIf="produtoSelecionado" style="padding-top: 10px">
+  <mat-card>
+    <mat-card-title>
+      Relacionamentos - {{produtoSelecionado.nome}}
+      <div style="text-align: right; padding-bottom: 10px;">
+        <button mat-button (click)="accordion.openAll()">Expand All</button>
+        <button mat-button (click)="accordion.closeAll()">Collapse All</button>
+      </div>
+    </mat-card-title>
+    <mat-card-content>
+
+      <mat-accordion multi>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>attach_money</mat-icon>
+            </mat-panel-title>
+            <mat-panel-description>
+              Coparticipacoes
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+
+          <mat-form-field>
+            <mat-label>First name</mat-label>
+            <input matInput>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label>Age</mat-label>
+            <input matInput type="number" min="1">
+          </mat-form-field>
+
+        </mat-expansion-panel>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>science</mat-icon>
+            </mat-panel-title>
+            <mat-panel-description>
+              Laboratorios
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+
+          <mat-form-field>
+            <mat-label>Country</mat-label>
+            <input matInput>
+          </mat-form-field>
+        </mat-expansion-panel>
+
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon>local_hospital</mat-icon>
+            </mat-panel-title>
+            <mat-panel-description>
+              Hospitais
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-card-content>
+  </mat-card>
 </div>
