--- a/src/app/components/produto/produto.component.html
+++ b/src/app/components/produto/produto.component.html
@@ -300,7 +300,7 @@
           </mat-expansion-panel>
           </div>
           <div style="width: 50%; padding-left: 10px">
-            <mat-expansion-panel>
+            <mat-expansion-panel (opened)="carregaTabelaHospital(produtoSelecionado.hospitais)">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 <mat-icon>local_hospital</mat-icon>
